fix cover alignment, methods, benefits anim

--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -1928,6 +1928,8 @@ body.lock {
   display: grid;
   align-items: center;
   grid-template-columns: auto 1fr auto auto;
+  align-self: end;
+  gap: 12px;
   grid-template-areas: "subtitle-top subtitle-top subtitle-top subtitle-top" "title-top title-top title-top psychotherapy" "sextherapy icons title-bottom title-bottom" "subtitle-bottom subtitle-bottom subtitle-bottom subtitle-bottom";
 }
 @media only screen and (max-width: 767px) {
@@ -1995,7 +1997,7 @@ body.lock {
 }
 .cover__action {
   grid-row: 3/4;
-  padding-top: 50px;
+  margin-top: 50px;
 }
 .cover__cross {
   fill: #fefefe;
